syntax = "proto3";

package buffed.dto;

import "buffed/role.proto";

message UserBuf {
    int32 id = 1;
    string email = 2;
    string name = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
}

message SuperuserBuf {
    int32 id = 1;
    string created_at = 2;
}

message PasswordBuf {
    int32 id = 1;
    string password = 2;
    string created_at = 3;
    string updated_at = 4;
}

message OrgBuf {
    int32 id = 1;
    string name = 2;
    string status = 3;
    int32 owner_id = 4;
    string created_at = 5;
    string updated_at = 6;
}

message OrgMemberBuf {
    int32 id = 1;
    int32 org_id = 2;
    int32 user_id = 3;
    repeated buffed.role.RoleTypeBuf roles = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message OrgMembershipBuf {
    int32 org_id = 1;
    string org_name = 2;
    int32 user_id = 3;
    repeated buffed.role.RoleTypeBuf roles = 4;
}

message AppBuf {
    int32 id = 1;
    string name = 2;
    string secret = 3;
    string redirect_uri = 4;
    string created_at = 5;
    string updated_at = 6;
}

message OrgAppBuf {
    int32 id = 1;
    int32 org_id = 2;
    int32 app_id = 3;
    string created_at = 4;
}

message OauthCodeBuf {
    int32 id = 1;
    string code = 2;
    string state = 3;
    string redirect_uri = 4;
    string scope = 5;
    int32 app_id = 6;
    int32 org_id = 7;
    int32 user_id = 8;
    string created_at = 9;
    string expires_at = 10;
}

message ErrorMessageBuf {
    uint32 status_code = 1;
    string message = 2;
    string error = 3;
}

message SetupBodyBuf {
    string setup_key = 1;
    string email = 2;
    string password = 3;
}
